ran script on several packages, moved working script into Migration folder of property_db